# OpenStaticAnalyzer

./: CMakeLists.txt
cl/LIM2Stink/: CMakeLists.txt  Stink.rul
cl/LIM2Stink/inc/: LIM2Stink.h
cl/LIM2Stink/inc/visitors/: Example.h  RefusedBequest.h  Singleton.h  TemporaryField.h
cl/LIM2Stink/src/: LIM2Stink.cpp  main.cpp
cl/LIM2Stink/src/visitors/: Example.cpp  RefusedBequest.cpp  Singleton.cpp  TemporaryField.cpp
cl/OpenStaticAnalyzerJava/src/: main.cpp
